[package]
name = "rdvb"
description = "Manipulate Digital Video Broadcasting (DVB) devices to watch TV and more"
repository = "https://github.com/MarimeGui/rdvb"
keywords = ["dvb"]
categories = ["multimedia"]
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
enum-from-discriminant-derive = { git = "https://github.com/MarimeGui/enum-from-discriminant-derive.git" }
nix = { version = "0.30.1", features = ["fs", "ioctl"] }
thiserror = "2.0.12"
